--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,8 +11,7 @@ phases:
       - "cd /usr/bin"
       - "curl -s -qL -o terraform.zip https://releases.hashicorp.com/terraform/0.11.14/terraform_0.11.14_linux_amd64.zip"
       - "unzip -o terraform.zip"
-      - cd ..
-      - cd ..
+      - cd "$CODEBUILD_SRC_DIR" 
   build:
     commands:
       - echo Build started on `date`
