--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,8 @@ phases:
       docker: 18
   pre_build:
     commands:
+      "curl -s -qL -o /usr/bin/jq https://stedolan.github.io/jq/download/linux64/jq"	
+      - "chmod +x /usr/bin/jq"
       - "cd /usr/bin"
       - "curl -s -qL -o terraform.zip https://releases.hashicorp.com/terraform/0.12.19/terraform_0.12.19_linux_amd64.zip"
       - "unzip -o terraform.zip"
