--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
       - echo Build started on `date`
       - cd terraform
       - terraform init
-      - terraform apply -auto-approve -no-color
+      - TF_VAR_tag=${BUILD_NUMBER} terraform apply -auto-approve -no-color
   post_build:
     commands:
       - echo Build completed on `date`
