--- a/buildspec copy.yml
+++ b/buildspec copy.yml
@@ -9,13 +9,13 @@ phases:
       - "cd /usr/bin"
       - "curl -s -qL -o terraform.zip https://releases.hashicorp.com/terraform/0.12.19/terraform_0.12.19_linux_amd64.zip"
       - "unzip -o terraform.zip"
-      - cd "$CODEBUILD_SRC_DIR" 
+      -  cd "$CODEBUILD_SRC_DIR" 
   build:
     commands:
       - echo Build started on `date
       - cd terraform
       - terraform init
-      - terraform apply -auto-approve -no-color
+      - TF_VAR_tag="$CODEBUILD_BUILD_NUMBER" terraform apply -auto-approve -no-color
   post_build:
     commands:
       - echo Build completed on `date`
