--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       - cd "$CODEBUILD_SRC_DIR" 
   build:
     commands:
-      - echo Build started on `date
+      - echo Build started on `date`
       - cd terraform
       - terraform init
       - terraform apply -auto-approve -no-color
