--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      docker: 18
+      docker: 18    
   pre_build:
     commands:
       - "cd /usr/bin"
@@ -15,7 +15,8 @@ phases:
       - echo Build started on `date`
       - cd terraform
       - terraform init
-      - TF_VAR_tag="$CODEBUILD_BUILD_NUMBER" terraform apply -auto-approve -no-color
+     # - TF_VAR_tag=dev-"$CODEBUILD_BUILD_NUMBER" terraform apply -auto-approve -no-color
+      - terraform destroy -auto-approve  -no-color
   post_build:
     commands:
       - echo Build completed on `date`
